[package]
name = "owa4x"
version = "0.4.0"
authors = ["Nick Gamroth <thebeekeeper@gmail.com>"]
edition = "2018"
description = "Idiomatic wrapper around the owa4x-sys crate"
license = "MIT"
repository = "https://github.com/thebeekeeper/owa4x"

[dependencies]
#owa4x-sys = { path = "../owa4x-sys" }
log = "0.4"
num = "0.2"
num-traits = "0.2"
num-derive = "0.3"
num_enum = "0.5"

[dev-dependencies]
env_logger = "0.7.1"

[target.'cfg(target_arch = "arm")'.dependencies]
owa4x-sys = { path = "../owa4x-sys" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
owa5x-sys = { path = "../owa5x-sys" }

