[package]
name = "owa4x"
version = "0.4.3"
authors = ["Nick Gamroth <thebeekeeper@gmail.com>"]
edition = "2018"
description = "Idiomatic wrapper around the owa4x-sys crate"
license = "MIT"
repository = "https://github.com/thebeekeeper/owa4x"

[dependencies]
log = "0.4"
num = "0.2"
num-traits = "0.2"
num-derive = "0.3"
num_enum = "0.5"

[dev-dependencies]
env_logger = "0.7.1"

[target.'cfg(target_arch = "arm")'.dependencies]
#owa4x-sys = { path = "../owa4x-sys" }
owa4x-sys = "0.1.7"

[target.'cfg(all(target_arch = "aarch64", not(target_os = "macos")))'.dependencies]
owa5x-sys = "0.1.0"

